// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

message DataProviderKey {
  string external_data_provider_id = 1;
}

message ReportingSetKey {
  string cmms_measurement_consumer_id = 1;
  string external_reporting_set_id = 2;
}

// Specifies the units to report on.
message ReportingUnit {
  message DataProviderKeys {
    repeated DataProviderKey data_provider_keys = 1;
  }

  message ReportingSetKeys {
    repeated ReportingSetKey reporting_set_keys = 1;
  }

  // A list of resource IDs to report on.
  //
  // For use with BasicReport these must be DataProvider resource IDs.
  // For use with AdvancedReport these must be ReportingSet resource IDs.
  oneof Components {
    DataProviderKeys dataProviderKeys = 1;
    ReportingSetKeys reportingSetKeys = 2;
  }
}
